--- a/job.yaml
+++ b/job.yaml
@@ -2,11 +2,10 @@
 - hosts: localhost
   connection: local
   gather_facts: no
-  vars_files: "{{ myvarfile }}"
   tasks:
   - name: Run a script
     script: start_automation_task.sh
     register: test
   - name: print script result
     debug:
-      msg: "{{ test }}" 
+      msg: "{{ test.stdout_lines }}" 
